# SmartSurveillance

./: README.md
binge/: CMakeLists.txt  Note  README.md
binge/assets/: input_video.mov
binge/cmake/: FindTensorflow.cmake
binge/include/binge/: Binge.hpp  ContextParser.hpp  Debug.hpp  Types.hpp
binge/src/: Binge.cpp  ContextParser.cpp  Debug.cpp
binge/test/: CMakeLists.txt  parse_video_frames.cpp
